clang/test/BSC/Negative/Ownership/Owned/pass_compound_literal_to_call/pass_compound_literal_to_call.cbs
// RUN: %clang_cc1 %s -fsyntax-only -verify

#define SIZE 30*1024*1024

struct Node {
  char data[SIZE];
};

struct Node *_Owned safe_malloc(struct Node);
void safe_free(void *_Owned);

void test1() {
  struct Node *_Owned p = safe_malloc(struct Node{.data = {0}}); // expected-error{{expected expression}}
  safe_free((void *_Owned)p);
}

void test2() {
  struct Node *_Owned p = safe_malloc((struct Node){.data = {0}});
  safe_free((void *_Owned)p);
}